authing : checklogin ,call back
