# controller/user.go
@@ -3,10 +3,14 @@ package controller
 import (
 	"net/http"
 
+	"github.com/Authing/authing-go-sdk/lib/authentication"
+	"github.com/coreos/go-oidc"
 	"github.com/gin-gonic/gin"
 	"github.com/opensourceways/xihe-server/app"
 	"github.com/opensourceways/xihe-server/domain"
 	"github.com/opensourceways/xihe-server/domain/repository"
+	"github.com/opensourceways/xihe-server/infrastructure/authing"
+	"github.com/opensourceways/xihe-server/utils"
 )
 
 func AddRouterForUserController(
@@ -16,8 +20,12 @@ func AddRouterForUserController(
 	pc := UserController{
 		repoUser: repoUser,
 	}
+	rg.Use(authing.Authorize())
+	rg.PUT("/v1/user", pc.Update)
+	rg.GET("/v1/user/checkLogin", pc.CheckLogin)
+	rg.GET("/v1/user/callback", pc.AuthingCallback)
+	rg.GET("/v1/user/getCurrentUser", pc.GetCurrentUser)
 
-	rg.POST("/v1/user", pc.Update)
 }
 
 type UserController struct {
@@ -81,4 +89,65 @@ func (uc *UserController) genUpdateUserBasicInfoCmd(m *userBasicInfoModel) (
 	cmd.AvatarId, err = domain.NewAvatarId(m.AvatarId)
 
 	return
+}
+
+// @Summary CheckLogin
+// @Description CheckLogin
+// @Tags  User
+// @Accept json
+// @Produce json
+// @Router /v1/user/checkLogin [get]
+func (uc *UserController) CheckLogin(c *gin.Context) {
+	state, _ := utils.RandString(16)
+	nonce, _ := utils.RandString(16)
+	authing.SetCallbackCookie(c.Writer, c.Request, "state", state)
+	authing.SetCallbackCookie(c.Writer, c.Request, "nonce", nonce)
+	c.Redirect(http.StatusFound, authing.OIDCConfig.AuthCodeURL(state, oidc.Nonce(nonce)))
+}
+
+// @Summary AuthingCallback
+// @Description login success callback
+// @Tags  User
+// @Accept json
+// @Produce json
+// @Router /v1/user/callback [get]
+func (uc *UserController) AuthingCallback(c *gin.Context) {
+	state, err := c.Request.Cookie("state")
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, newResponse(
+			"400", "Cookie Error", err.Error(),
+		))
+		return
+	}
+	if c.Request.URL.Query().Get("state") != state.Value {
+		c.JSON(http.StatusInternalServerError,
+			newResponse(
+				"400", "state Error", err.Error(),
+			))
+		return
+	}
+	result, err := authing.GetTokenFromAuthing(c.Request.URL.Query().Get("code"))
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, newResponse(
+			"400", "code Error", err.Error(),
+		))
+		return
+	}
+	c.JSON(http.StatusOK, newResponse(
+		"200", "ok", result,
+	))
+}
+
+// @Summary GetCurrentUser
+// @Description 获取用户资料, 在请求的request的header中必须带有accessToken
+// @Tags  User
+// @Accept json
+// @Produce json
+// @Router /v1/user/getCurrentUser [get]
+func (uc *UserController) GetCurrentUser(c *gin.Context) {
+	currentUserClient := c.Keys["me"].(*authentication.Client)
+	c.JSON(http.StatusOK,
+		newResponse(
+			"200", "ok", currentUserClient.ClientUser,
+		))
 }
